force-app/main/default/objects/Streaming_Service__c/Streaming_Service__c.object-meta.xml
<CustomObject>
    <label>Streaming Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Streaming Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>