force-app/main/default/objects/Streaming_Service__c/fields/Service_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Key__c</fullName>
    <externalId>true</externalId>
    <label>Service Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>