force-app/main/default/objects/Streaming_Service__c/fields/TMDB_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>TMDB_Provider_Id__c</fullName>
    <label>TMDB Provider ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>